--- a/bridge/build.gradle
+++ b/bridge/build.gradle
@@ -17,7 +17,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled true
+            minifyEnabled false
         }
     }
     compileOptions {
@@ -35,3 +35,5 @@ dependencies {
     //noinspection GradleDependency
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
+
+apply from: 'j-build.gradle'
