--- a/bridge/j-build.gradle
+++ b/bridge/j-build.gradle
@@ -6,6 +6,7 @@ def gitUrl = 'https://github.com/gittosuperfly/AndroidModuleBridge.git' // Gitä»
 
 group = "com.cai.open"
 version = "1.0.0"
+project.archivesBaseName = "bridge-core"
 
 install {
     repositories.mavenInstaller {
