--- a/bridge/src/main/AndroidManifest.xml
+++ b/bridge/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.cai.bridge">
+<manifest package="com.cai.open.bridge">
 
 </manifest>
